add puma, remove multidownloading

--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -4,12 +4,12 @@
 <br><br><hr><br>
 
 <table class='table'>
-	<%= form_tag download_path, method: :post do %>
+	<%= form_tag download_path, method: :get do %>
 		<%= submit_tag 'Download' %>
-		<% @songs[0..20].each do |song| %>
+		<% @songs[0..10].each do |song| %>
 			<tr>
 				<td>
-					<%= check_box_tag 'songs[]', {url: song.url, filename: "#{song.artist} - #{song.title}"}.to_json, false %>
+					<%#= check_box_tag 'songs[]', {url: song.url, filename: "#{song.artist} - #{song.title}"}.to_json, false %>
 				</td>
 				<td>
 					<audio controls>
@@ -17,13 +17,13 @@
 					</audio>
 				</td>
 				<td>
-					<%= link_to  download_path(songs: [{url: song.url, filename: "#{song.artist} - #{song.title}"}.to_json]) do %>
+					<%= link_to  download_path(url: song.url, filename: "#{song.artist} - #{song.title}") do %>
 						<span class='glyphicon glyphicon-download'></span>
 					<% end %>
 				</td>
 				<td>
 					<%= "#{song.artist} - #{song.title}" %>
-					<%= link_to 'Download', song.url, download: "#{song.artist} - #{song.title}" %>
+					<%= link_to 'Download', song.url, download: "#{song.artist} - #{song.title}.mp3" %>
 				</td>
 			</tr>
 		<% end %>
