--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,14 +1,9 @@
-<p>Current user <%= "#{current_user.try :provider} #{current_user.try :uid}" %></p>
+<div class='row'>
+	<div class='col-md-3'>Current user <%= "#{current_user.try :provider} #{current_user.try :uid}" %></div>
+	<div clas='col-md-2'><%= link_to 'Sign out', destroy_user_session_path, method: :delete %></div>
+</div>
 <%= image_tag current_user.try :photo_url %>
-<p>Songs index</p>
-<%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
-<br><br><hr><br>
-
-
-<%= link_to '<<', root_path(page: @page - 1), remote: true, id: 'prev' %>
-<%= link_to '>>', root_path(page: @page + 1), remote: true, id: 'next' %>
-
-<%= link_to 'Download motherfucker', 'https://www.gravatar.com/avatar/f5b260fd26d47ecd5443e6ad026b9896?s=32&d=identicon&r=PG', download: 'fuck.mp3' %>
+<hr>
 
 <input type='hidden' id='current_page' />  
 <input type='hidden' id='show_per_page' /> 
@@ -19,5 +14,6 @@
 			<% @songs.each do |song| %>
 				<%= render partial: 'song', locals: {song: song} %>
 			<% end %>
+			<%= will_paginate @songs %>
 		</div>
 	<% end %>
